<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">RoboPad++</string>
    <string name="settings">Settings</string>
    <string name="title_activity_select_robot" translatable="false">SelectRobotActivity</string>
    
    <string name="pollywog">Pollywog</string>
    <string name="beetle">Beetle</string>
    <string name="rhino">Rhino</string>
    <string name="crab">Crab</string>
    <string name="generic_robot">Generic robot</string>
    
    <string name="exit_robot_control_dialog">The connection with this robot will be lost, do you really want to choose a new type of robot?</string>
    <string name="exit_robot_control_dialog_title">Disconnect the robot</string>

    <string name="show_printbot_connections_ask_board">Which board are you using?</string>

    <!-- Rhino robot -->
    <string name="charge">Charge</string>
    
    <!-- Crab robot -->
    <string name="step_size">Size of steps </string>
    <string name="left_amplitude">Left amplitude: </string>
    <string name="right_amplitude">Right amplitude: </string>
    <string name="speed">Speed</string>
    <string name="period">Period:</string>
    <string name="legs_coordination">"Coordination\nbetween legs"</string>
    <string name="phase_difference">Phase difference: </string>
    <string name="reset">Reset</string>
    <string name="default_amplitude" translatable="false">20</string>
    <string name="default_period" translatable="false">2000</string>
    <string name="default_phase" translatable="false">-90</string>
    
    <!-- DragDropGrid -->
    <string name="remove">Remove</string>
    <string name="schedule_title">"Schedule the movements of the "</string>
    <string name="schedule">Schedule</string>
    
    <!-- Scheduler -->
    <string name="load_scheduled_movements_title">Select the list of movements that you want to load</string>
    <string name="delete_scheduled_movements_title">Select the list movements that you want to delete</string>
    <string name="save_scheduled_movements_title">Choose a name for this list of movements</string>
    <string name="save_succeeded">The list of movements was saved!</string>
    <string name="save_not_succeeded">There was an error while saving the list of movements. Nothing was saved!</string>
    <string name="delete_succeeded">The list of movements was deleted!</string>
    <string name="delete_not_succeeded">There was an error while deleting the list of movements. Nothing was deleted!</string>
    <string name="load_not_succeeded">There was an error while loading the list of movements</string>
    <string name="no_files_stored">There are no saved lists of movements for this robot</string>
    <string name="invalid_name">Enter a valid name</string>
    <string name="send_controls_error">There was an error sending the list of movements to your Printbot</string>

    <!-- Tips -->
    <string name="pin_explanation_tip_text">If you click on me, I will show you how to connect my pins</string>
    <string name="bluetooth_tip_text">If you click on me, I will connect or disconnect with the robot</string>
    <string name="schedule_tip_text">If you click on me, I will take you to the movements programmer</string>
    <string name="pad_tip_text">If you click on us, we will control the robot</string>
    <string name="claws_tip_text">If you click on us, we will control\nthe claws of the robot</string>
    <string name="line_follower_text">If you click on me, I will enable or disable the line follower mode</string>
    <string name="light_avoider_text">If you click on me, I will enable or disable the light avoider mode</string>
    <string name="obstacles_avoider_text">If you click on me, I will enable or disable the obstacles avoider mode</string>
    <string name="scheduler_add_commands_text">Click on us to add us to the list of robot movements</string>
    <string name="scheduler_remove_all_text">Click on me to delete all movements</string>
    <string name="scheduler_send_text">Click on me to send the movements to the robot!</string>
    <string name="scheduler_load_text">CClick on me to load a list of movements</string>
    <string name="scheduler_save_text">Click on me to save a list of movements</string>
    <string name="scheduler_remove_file_text">Click on me to delete a stored list of movement</string>
    <string name="scheduler_grid_text">All the movements will be added here.\nYou can change the order of the movements by clicking\non them or delete them by dropping them in the bin</string>

    <!-- Error -->
    <string name="max_exceeded_error">"The maximum value is "</string>
    <string name="min_exceeded_error">"The minimum value is "</string>

    <!--Permissions-->
    <string name="permission_location">Location permission is needed to search for the robots near you to connect to them</string>
    <string name="rationale_location">Location permission is needed to search for the robots near you to connect to them.
        You will only be able to connect to paired robots</string>
    
    <!--BT type selector dialog-->
    <string name="bt_socket_selector_view_text" translatable="false">Zum Core</string>
    <string name="ble_selector_view_text" translatable="false">Zum Core 2.0</string>

</resources>
