<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none">

    <RelativeLayout
        android:id="@+id/controls_layout_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="3dp"
        android:layout_gravity="center_vertical">

        <Button
            android:id="@+id/pollywog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_green_selector"
            android:drawableTop="@drawable/bot_pollywog"
            android:text="@string/pollywog" />

        <Button
            android:id="@+id/beetle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/pollywog_button"
            android:background="@drawable/btn_green_selector"
            android:drawableTop="@drawable/bot_beetle"
            android:text="@string/beetle" />

        <Button
            android:id="@+id/rhino_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/beetle_button"
            android:background="@drawable/btn_green_selector"
            android:drawableTop="@drawable/bot_rhino"
            android:text="@string/rhino" />

        <Button
            android:id="@+id/crab_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/rhino_button"
            android:background="@drawable/btn_green_selector"
            android:drawableTop="@drawable/bot_crab"
            android:text="@string/crab" />

        <Button
            android:id="@+id/generic_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/crab_button"
            android:background="@drawable/btn_green_selector"
            android:drawableTop="@drawable/bot_generic"
            android:text="@string/generic_robot" />

    </RelativeLayout>

</HorizontalScrollView>